# Polydeal

./: .clang-format  CMakeLists.txt  LICENSE  README.md  agglomeration__accessor_8h.html  agglomeration__accessor_8h.js  agglomeration__accessor_8h_source.html  agglomeration__handler_8cc.html  agglomeration__handler_8cc.js  agglomeration__handler_8cc_source.html  agglomeration__handler_8h.html  agglomeration__handler_8h.js  agglomeration__handler_8h_source.html  agglomeration__iterator_8h.html  agglomeration__iterator_8h.js  agglomeration__iterator_8h_source.html  agglomerator_8h.html  agglomerator_8h.js  agglomerator_8h_source.html  annotated.html  annotated_dup.js  assembly__check_8cc.html  assembly__check_8cc.js  assembly__check_8cc_source.html  citation.cff  class_agglomeration_accessor-members.html  class_agglomeration_accessor.html  class_agglomeration_accessor.js  class_agglomeration_handler-members.html  class_agglomeration_handler.html  class_agglomeration_handler.js  class_agglomeration_iterator-members.html  class_agglomeration_iterator.html  class_agglomeration_iterator.js  class_agglomerator.html  class_f_e___agglo_d_g_p-members.html  class_f_e___agglo_d_g_p.html  class_f_e___agglo_d_g_p.js  class_finit_element.html  class_linear_operator_m_g-members.html  (+233 more)
.github/workflows/: doxygen.yml  indentation.yml  tests.yml
doc/: Doxyfile
docs/: Doxyfile
docs/doxygen/: CMakeLists.txt  Doxyfile
examples/: 3D_piston.cc  CMakeLists.txt  PolyOseen.cc  PolyStokesDarcy.cc  agglo_amg.cc  agglo_multigrid.cc  agglomerated_Poisson.vtu  agglomerated_Poisson_test.vtu  benchmark_likwid.cc  benchmarks_3D.cc  cache_tree.cc  classical_dg_assembly.cc  diffusion_reaction.cc  export_matrices.cc  matrix_free_agglo.cc  metrics.cc  minimal_SIP.cc  minimal_SIP_FEInterfaceValues.cc  monodomain_DG2D.cc  monodomain_DG3D.cc  multigrid._solver.cc  multigrid_solver.cc  oseen.cc  parameters_monodomain.prm  poisson.cc  poisson_simplex.cc  repairing.cc  rtree_test.cc  rtree_tests.cc  simplex_agglomerated_multigrid.cc  std_SIP_matrix.txt  two_level_multigrid.cc  unstructured_grid.cc  weak_scaling.cc
examples/matrix_market_matrices/unstructured_square/: README.md
examples/matrix_market_matrices/unstructured_square/ord1/: P_0_1  P_1_2  unstructured_square_ord_1.mm
examples/matrix_market_matrices/unstructured_square/ord2/: P_0_1  unstructured_square_ord_2.mm
include/: agglomeration_accessor.h  agglomeration_handler.h  agglomeration_internals.h  agglomeration_iterator.h  agglomerator.h  fe_agglodgp.h  linear_operator_for_mg.h  multigrid_amg.h  multigrid_utils.h  non_nested_transfer.h  packaged_operation_for_mg.h  poly_utils.h  rtree_visitor.h  utils.h
meshes/csvs/: polygonmetis_16.csv  polygonmetis_20.csv  polygonmetis_364.csv  polygonmetis_64.csv  polygonmetis_80.csv  polygonmetis_91.csv  polygonrtree_16.csv  polygonrtree_20.csv  polygonrtree_23.csv  polygonrtree_364.csv  polygonrtree_6.csv  polygonrtree_64.csv  polygonrtree_80.csv  polygonrtree_91.csv
scripts/: dr.sh  export_matrices.sh  indent  plotter.ipynb  plotter.py
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_24.js  all_25.js  all_26.js  all_5.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_12.js  classes_13.js  classes_15.js  classes_2.js  classes_3.js  (+129 more)
source/: CMakeLists.txt  agglomeration_handler.cc  assembly_check.cc  classical_dg_assembly.cc  fe_agglodgp.cc  multigrid_amg.cc
src/: CMakeLists.txt  agglomeration_handler.cc  agglomerator.cc  assembly_check.cc  classical_dg_assembly.cc  non_nested_transfer.cc  snippet.cc  step.cc
test/agglomeration/: CMakeLists.txt  agg_handler_bbox_test.cc  agg_handler_bbox_test.output  aggl_handler_master_and_slaves_01.cc  aggl_handler_master_and_slaves_01.output  agglomerated_neighbors_01.cc  agglomerated_neighbors_01.output  agglomerated_neighbors_02.cc  agglomerated_neighbors_02.output  agglomerated_neighbors_03.cc  agglomerated_neighbors_03.output  agglomerated_neighbors_04.cc  agglomeration_signals.cc  agglomeration_signals.output  fe_collection_agglomeration.cc  fe_space_on_bbox.cc  fe_space_on_bbox.output  hp_structure_01.cc  hp_structure_01.output  intergrid_transfer.cc  intergrid_transfer.output  minimal_SIP_Poisson.cc  n_agglomerated_faces.cc  n_agglomerated_faces.output  poisson.output  poisson_sanity_check_02.output  poisson_sanity_check_03.cc  poisson_sanity_check_03.output  reinit_cell_face.cc  reinit_cell_face.output  reinit_cell_face_01.cc  reinit_cell_face_02.cc  reinit_cell_face_master_master.cc  reinit_cell_face_quad_pts.cc  reinit_cell_face_quad_pts.output  sparsity_agglomerated_tria.cc  sparsity_agglomeration.cc  sparsity_agglomeration.output  unstructured_grid.cc  unstructured_grid.output
test/polydeal/: 3DRtree.cc  3DRtree.output  CMakeLists.txt  agg_handler_bbox_test.cc  aggl_handler_master_and_slaves_01.cc  aggl_handler_master_and_slaves_01.output  agglomerate_distributed_mesh.cc  agglomerate_distributed_mesh.with_mpi=true.with_p4est=true.mpirun=3.output  agglomerated_neighbors_01.cc  agglomerated_neighbors_01.output  agglomerated_neighbors_02.cc  agglomerated_neighbors_02.output  agglomerated_neighbors_03.cc  agglomerated_neighbors_03.output  agglomeration_signals.cc  coarse_operator_from_matrix_free.cc  coarse_operator_from_matrix_free.with_mpi=true.with_p4est=true.mpirun=3.output  continuous_face.cc  continuous_face.output  continuous_face_01.cc  continuous_face_02.cc  continuous_face_02.output  continuous_face_03.cc  continuous_face_03.output  continuous_face_distorted_grid.cc  continuous_face_distorted_grid.output  continuous_face_exact_solution.cc  continuous_face_exact_solution.output  disconnected_exact_solution.cc  disconnected_exact_solution.output  distributed_injection_01.cc  distributed_injection_01.with_mpi=true.with_p4est=true.mpirun=3.output  distributed_poisson_sanity_check_01.cc  (+70 more)
(+5 files in other folders)
